# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "快递代取11 API",
+        "title": "Go-server API",
         "contact": {
             "name": "silenceLamb",
             "url": "http://www.swagger.io/support",
@@ -12,7 +12,7 @@
     "host": "localhost:9090",
     "basePath": "/",
     "paths": {
-        "/admin/login": {
+        "/login": {
             "post": {
                 "description": "用户登录接口",
                 "produces": [
@@ -26,14 +26,14 @@
                     {
                         "type": "string",
                         "description": "username",
-                        "name": "code",
+                        "name": "username",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "username",
-                        "name": "name",
+                        "description": "password",
+                        "name": "password",
                         "in": "formData",
                         "required": true
                     }
@@ -63,35 +63,63 @@
                         "type": "string",
                         "description": "key",
                         "name": "key",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "component",
                         "name": "component",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "label",
                         "name": "label",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "parent_id",
                         "name": "parent_id",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "sort",
                         "name": "sort",
-                        "in": "formData",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/menu/info": {
+            "get": {
+                "description": "这是一个新增菜单接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "菜单"
+                ],
+                "summary": "菜单详情",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -147,6 +175,77 @@
                         "description": "component",
                         "name": "component",
                         "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/menu/update": {
+            "put": {
+                "description": "更新菜单信息接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "菜单"
+                ],
+                "summary": "更新菜单信息",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "key",
+                        "name": "key",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "component",
+                        "name": "component",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "label",
+                        "name": "label",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "parent_id",
+                        "name": "parent_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "sort",
+                        "name": "sort",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "icon",
+                        "name": "icon",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -255,6 +354,22 @@
                     "用户"
                 ],
                 "summary": "导出",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "size",
+                        "name": "size",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
