# models/menu_list.go
@@ -1,7 +1,11 @@
 package models
 
 import (
+	"fmt"
+	"github.com/gin-gonic/gin"
+	"github.com/goinggo/mapstructure"
 	"gorm.io/gorm"
+	"net/http"
 	"time"
 )
 
@@ -37,7 +41,8 @@ func GetMenus(List []MenuList, PId int) (treeList []Menus) {
 					Sort:       v.Sort,
 					CreateTime: v.CreateTime,
 					UpdateTime: v.UpdateTime,
-					DeleteTime: v.DeleteTime},
+					DeleteTime: v.DeleteTime,
+				},
 			}
 			node.Children = child
 
@@ -46,6 +51,45 @@ func GetMenus(List []MenuList, PId int) (treeList []Menus) {
 		}
 	}
 	return treeList
+}
+
+// 菜单参数
+func FormatQuery(query map[string]interface{}) MenuList {
+	q := map[string]interface{}{
+		"Id":        query["id"],
+		"Path":      query["key"],
+		"Component": query["component"],
+		"Label":     query["label"],
+		"ParentId":  query["parent_id"],
+		"Sort":      query["sort"],
+	}
+	var data MenuList
+	//将 map 转换为指定的结构体
+	if err := mapstructure.Decode(q, &data); err != nil {
+		fmt.Println(err)
+	}
+	return data
+}
+
+// GetMenuInfo 获取菜单详情
+func GetMenuInfo(ctx *gin.Context, id int) (info *MenuList) {
+	fmt.Println("id", id)
+	info = new(MenuList)
+	err := DB.Where("id = ?", id).First(&info).Error
+	//if err != nil {
+	if err != nil {
+		ctx.JSON(
+			http.StatusOK, gin.H{
+				"status":  -1,
+				"error":   "User Info err:" + err.Error(),
+				"message": "菜单不存在",
+			},
+		)
+		return nil
+	}
+	//return nil, err
+	//}
+	return info
 }
 
 // 菜单列表
